@@ -8,6 +8,8 @@ Fixed bugs:
 -----------
 
 * <zip filesonly="true"> included empty directories.  Bugzilla report 40258.
+* Invalid hash code of Target causes XmlLogger to fail.
+  Bugzilla report 40207.
 
 Other changes:
 --------------
